--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,7 @@ pipeline {
     environment {
         EMULATOR_DEVICE = "Samsung Galaxy S10"
         APK_PATH = "C:/apk-files/Android.apk"
-        // Dynamically get the Jenkins workspace path (adjust if needed)
-        WORKSPACE_PATH = pwd().replace("\\", "/")
+        WORKSPACE_PATH = pwd().replace("\\", "/")  // Convert Windows path to Unix-friendly format
     }
 
     stages {
@@ -36,7 +35,7 @@ pipeline {
             steps {
                 script {
                     echo "Waiting for emulator to start (2 minutes)..."
-                    bat 'ping -n 120 127.0.0.1 >nul'
+                    bat 'ping -n 60 127.0.0.1 >nul'
                 }
             }
         }
@@ -50,18 +49,31 @@ pipeline {
             }
         }
 
-        stage('Clean and Recreate Target Directory') {
+        stage('Install JDK 17 and Maven') {
             steps {
                 script {
-                    echo "Cleaning target directory..."
-                    // Remove the entire target directory
-                    bat 'docker exec android-container bash -c "rm -rf /workspace/target || echo No target directory to clean"'
-                    
-                    echo "Recreating target directory with proper permissions..."
-                    bat 'docker exec android-container bash -c "mkdir -p /workspace/target && chmod -R 777 /workspace/target"'
-                    
-                    echo "Listing target directory contents..."
-                    bat 'docker exec android-container bash -c "ls -l /workspace/target"'
+                    echo "Installing JDK 17 and Maven in the container..."
+
+                    // Install Java 17 and Maven inside the container
+            // Use double quotes to handle command correctly in Windows batch
+                    bat """
+                    docker exec -u 0 android-container bash -c "apt-get update"
+                    docker exec -u 0 android-container bash -c "apt-get install -y openjdk-17-jdk maven"
+                    """
+                }
+            }
+        }
+
+        stage('Verify Java and Maven Installation') {
+            steps {
+                script {
+                    echo "Verifying JDK 17 and Maven installation..."
+
+                    // Check Java version
+                    bat 'docker exec android-container java -version'
+
+                    // Check Maven version
+                    bat 'docker exec android-container mvn -v'
                 }
             }
         }
@@ -106,11 +118,8 @@ pipeline {
         stage('Run Maven Tests with Profile') {
             steps {
                 script {
-                    echo "Installing Maven and Java (JDK 17) in the container..."
-                    bat 'docker exec -u 0 android-container bash -c "apt-get update && apt-get install -y maven openjdk-17-jdk"'
-
                     echo "Running Maven tests from the correct directory..."
-                    bat 'docker exec android-container bash -c "cd /workspace && ls && mvn clean test -Dtest=project.test.swag.runners.testRunner -Dandroid.maven.plugin.skip=true -Dmaven.clean.failOnError=false"'
+                    bat 'docker exec android-container bash -c "cd /workspace && mvn clean test -Dtest=project.test.swag.runners.testRunner -Dandroid.maven.plugin.skip=true"'
                 }
             }
         }
@@ -125,6 +134,7 @@ pipeline {
                 } catch (Exception e) {
                     echo "Appium server not found. Continuing cleanup."
                 }
+
                 echo "Cleaning up Docker container..."
                 bat 'docker rm -f android-container || echo No container to remove'
             }
