--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
-                        <include>**/*Runner.java</include>  <!-- ✅ Matches TestRunner.java -->
+                        <include>**/*TestRunner.java</include>   <!-- ✅ Matches TestRunner.java -->
                     </includes>
                 </configuration>
             </plugin>
