--- a/pom.xml
+++ b/pom.xml
@@ -164,15 +164,23 @@
 
             <!-- Maven Surefire Plugin for running Cucumber tests -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <includes>
-                        <include>**/*TestRunner.java</include>   <!-- ✅ Matches TestRunner.java -->
-                    </includes>
-                </configuration>
-            </plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.21.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.2.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.2.0-M1</version>
+        </dependency>
+    </dependencies>
+</plugin>
+
 
             <!-- Maven Failsafe Plugin for Integration Tests -->
             <plugin>
