--- a/jenkinsfile
+++ b/jenkinsfile
@@ -102,7 +102,7 @@ pipeline {
             steps {
                 script {
                     echo "Starting Appium server..."
-                    bat 'docker exec -d android-container appium --address 0.0.0.0 --port 4723'
+                    bat 'docker exec -d android-container appium --address 0.0.0.0 --port 4723 --base-path /wd/hub'
                 }
             }
         }
