--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,10 +18,10 @@ pipeline {
         stage('Start Fresh Docker Container') {
             steps {
                 script {
-                    echo "🛠 Removing any existing container..."
+                    echo "Removing any existing container..."
                     bat 'docker rm -f android-container || echo No container to remove'
 
-                    echo "🚀 Starting a new container..."
+                    echo "Starting a new container..."
                     bat """
                         docker run -d -p 6080:6080 -p 4723:4723 ^
                         -e EMULATOR_DEVICE="${EMULATOR_DEVICE}" -e WEB_VNC=true --device /dev/kvm ^
@@ -35,7 +35,7 @@ pipeline {
         stage('Wait for Emulator to Start') {
             steps {
                 script {
-                    echo "⏳ Waiting for emulator to start (2 minutes)..."
+                    echo "Waiting for emulator to start (2 minutes)..."
                     bat 'ping -n 60 127.0.0.1 >nul'
                 }
             }
@@ -44,7 +44,7 @@ pipeline {
         stage('Verify ADB Connection') {
             steps {
                 script {
-                    echo "🔍 Checking if emulator is detected by ADB..."
+                    echo "Checking if emulator is detected by ADB..."
                     bat 'docker exec android-container adb devices'
                 }
             }
@@ -83,16 +83,16 @@ pipeline {
                         echo "📦 Attempt ${attempt}: Installing APK..."
                         def result = bat(returnStatus: true, script: 'docker exec android-container adb install /apk-files/Android.apk')
                         if (result == 0) {
-                            echo "✅ APK installed successfully!"
+                            echo "APK installed successfully!"
                             success = true
                         } else {
-                            echo "❌ APK installation failed. Retrying in 5 seconds..."
+                            echo "APK installation failed. Retrying in 5 seconds..."
                             sleep(5)
                             attempt++
                         }
                     }
                     if (!success) {
-                        error("❌ APK installation failed after ${maxAttempts} attempts. Stopping pipeline.")
+                        error("APK installation failed after ${maxAttempts} attempts. Stopping pipeline.")
                     }
                 }
             }
