--- a/jenkinsfile
+++ b/jenkinsfile
@@ -80,7 +80,7 @@ pipeline {
                     def success = false
 
                     while (attempt <= maxAttempts && !success) {
-                        echo "📦 Attempt ${attempt}: Installing APK..."
+                        echo "Attempt ${attempt}: Installing APK..."
                         def result = bat(returnStatus: true, script: 'docker exec android-container adb install /apk-files/Android.apk')
                         if (result == 0) {
                             echo "APK installed successfully!"
@@ -113,8 +113,6 @@ pipeline {
                     echo "Running Maven tests from /workspace with JDK 17 settings..."
                     bat '''
                         docker exec android-container bash -c "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 && export PATH=/usr/lib/jvm/java-17-openjdk-amd64/bin:$PATH && cd /workspace && mvn clean verify -Dcucumber.plugin=pretty -Dandroid.maven.plugin.skip=true"
-                        docker exec android-container ls -l /workspace/src/test/java/project/test/swag/stepDef
-                        docker exec android-container ls -l /workspace/src/test/java/project/test/swag/runners
                     '''
                 }
             }
